erDiagram
  ACTIVITIES {
    INTEGER id PK
    TEXT name 
    TEXT type 
    TEXT instructions 
    TEXT materials_needed 
    TEXT age_range 
    INTEGER duration_minutes 
    INTEGER source_id 
  }
  BOOK_SUGGESTIONS {
    INTEGER id PK
    TEXT title 
    TEXT author 
    TEXT description 
    TEXT age_range 
    TEXT isbn 
    TEXT url 
  }
  GRADES {
    INTEGER id PK
    TEXT key 
    TEXT label 
    TEXT age_range 
    INTEGER sort_order 
  }
  MATERIAL_RELATIONS {
    INTEGER id PK
    TEXT from_kind 
    INTEGER from_id 
    TEXT relation_type 
    TEXT to_kind 
    INTEGER to_id 
  }
  MATERIAL_TAGS {
    INTEGER id PK
    TEXT material_kind 
    INTEGER material_id 
    INTEGER tag_id FK
  }
  TAGS ||--o{ MATERIAL_TAGS : "tag_id"
  RESOURCES {
    INTEGER id PK
    TEXT name 
    TEXT type 
    TEXT description 
    TEXT url 
    INTEGER free 
    INTEGER paywalled 
    INTEGER verified 
    INTEGER source_id FK
  }
  SOURCES ||--o{ RESOURCES : "source_id"
  SONGS {
    INTEGER id PK
    TEXT song_name 
    TEXT artist 
    TEXT catalog 
    TEXT lyrics 
    TEXT url 
    TEXT instructions 
    TEXT actions 
    TEXT age_range 
    INTEGER source_id FK
    INTEGER verified 
    TEXT type 
    TEXT educational_domain 
    TEXT materials_needed 
    TEXT tags 
    TEXT creator_artist 
    TEXT source_title 
    TEXT curriculum_links 
    TEXT early_years_links 
    TEXT markdown_path 
  }
  SOURCES ||--o{ SONGS : "source_id"
  SOURCES {
    INTEGER id PK
    TEXT path_or_url 
    TEXT type 
    TEXT checksum 
  }
  STANDARDS {
    INTEGER id PK
    INTEGER parent_standard_id FK
    TEXT framework 
    TEXT code 
    TEXT full_text 
    TEXT source 
    TEXT external_id 
  }
  STANDARDS ||--o{ STANDARDS : "parent_standard_id"
  SUBJECTS {
    INTEGER id PK
    TEXT key 
    TEXT label 
    INTEGER sort_order 
  }
  TAGS {
    INTEGER id PK
    INTEGER parent_tag_id FK
    TEXT name 
    TEXT definition 
  }
  TAGS ||--o{ TAGS : "parent_tag_id"
  TOPICS {
    INTEGER id PK
    INTEGER subject_id FK
    TEXT category 
    TEXT lesson_topic 
    TEXT skill_statement 
    REAL seq_num 
    TEXT taught 
    INTEGER merged_into_topic_id FK
    TEXT circle_time_slot 
  }
  SUBJECTS ||--o{ TOPICS : "subject_id"
  TOPICS ||--o{ TOPICS : "merged_into_topic_id"
  TOPIC_GRADES {
    INTEGER id PK
    INTEGER topic_id FK
    INTEGER grade_id FK
  }
  GRADES ||--o{ TOPIC_GRADES : "grade_id"
  TOPICS ||--o{ TOPIC_GRADES : "topic_id"
  TOPIC_MATERIALS {
    INTEGER id PK
    INTEGER topic_id FK
    TEXT material_kind 
    INTEGER material_id 
    TEXT role 
    TEXT use_in_phase 
    TEXT routine_slot 
    TEXT teacher_rationale 
  }
  TOPICS ||--o{ TOPIC_MATERIALS : "topic_id"
  TOPIC_STANDARDS {
    INTEGER id PK
    INTEGER topic_id FK
    INTEGER standard_id FK
    TEXT alignment_notes 
  }
  STANDARDS ||--o{ TOPIC_STANDARDS : "standard_id"
  TOPICS ||--o{ TOPIC_STANDARDS : "topic_id"
  TOPIC_TAGS {
    INTEGER id PK
    INTEGER topic_id FK
    INTEGER tag_id FK
  }
  TAGS ||--o{ TOPIC_TAGS : "tag_id"
  TOPICS ||--o{ TOPIC_TAGS : "topic_id"
  WEEKLY_PACING {
    INTEGER id PK
    INTEGER topic_grade_id FK
    INTEGER week_number 
    TEXT month 
    TEXT notes 
  }
  TOPIC_GRADES ||--o{ WEEKLY_PACING : "topic_grade_id"
  action_vocabulary {
    TEXT id PK
    TEXT normalized_action_family 
    TEXT examples 
    TEXT do_not_use_as_proof 
    TEXT created_at 
  }
  curriculum_topic_songs {
    TEXT id PK
    TEXT curriculum_topic_id FK
    TEXT search_chunk_id FK
    TEXT link_type 
    TEXT created_at 
    INTEGER topic_id FK
  }
  search_chunks ||--o{ curriculum_topic_songs : "search_chunk_id"
  curriculum_topics ||--o{ curriculum_topic_songs : "curriculum_topic_id"
  TOPICS ||--o{ curriculum_topic_songs : "topic_id"
  curriculum_topics {
    TEXT id PK
    TEXT grade_key 
    TEXT grade 
    INTEGER early_years 
    TEXT subject 
    TEXT category 
    INTEGER seq_number 
    TEXT lesson_topic 
    TEXT skill_statement 
    TEXT standards 
    INTEGER song_count 
    TEXT linked_songs 
    TEXT linked_resources 
    TEXT tags 
    TEXT circle_time_slot 
    TEXT created_at 
    TEXT updated_at 
  }
  import_batches {
    INTEGER id PK
    TEXT migration_id FK
    TEXT source_name 
    TEXT source_path 
    TEXT source_sha256 
    TEXT imported_at 
  }
  schema_migrations ||--o{ import_batches : "migration_id"
  lesson_assets {
    INTEGER id PK
    INTEGER lesson_id 
    TEXT asset_type 
    TEXT title 
    TEXT description 
    TEXT file_path 
    TEXT format 
    TEXT generation_prompt 
    TEXT visual_notes 
    TEXT status 
    INTEGER worksheet_brief_id 
    TEXT created_at 
    TEXT updated_at 
  }
  lesson_blueprints {
    INTEGER id PK
    INTEGER curriculum_topic_id 
    TEXT slug 
    TEXT title 
    TEXT subject 
    TEXT category 
    TEXT grade_band 
    TEXT summary 
    TEXT purpose 
    TEXT lesson_mode 
    INTEGER duration_minutes 
    TEXT learning_goals_json 
    TEXT success_criteria_json 
    TEXT vocabulary_json 
    TEXT materials_json 
    TEXT teacher_prep 
    TEXT assessment_plan 
    TEXT differentiation_support 
    TEXT extension 
    TEXT cross_curricular 
    TEXT staff_lead 
    TEXT student_characters 
    TEXT character_rationale 
    TEXT source_provenance 
    TEXT editorial_status 
    TEXT review_state 
    TEXT review_flags 
    INTEGER version 
    TEXT created_at 
    TEXT updated_at 
  }
  lesson_materials {
    INTEGER id PK
    INTEGER lesson_id 
    TEXT material_kind 
    INTEGER material_id 
    TEXT role 
    TEXT use_in_phase 
    TEXT teacher_rationale 
    TEXT verification_state 
    TEXT source_table 
    INTEGER source_row_id 
  }
  lesson_resource_guidance {
    INTEGER id PK
    INTEGER lesson_id 
    INTEGER resource_id 
    TEXT relevance 
    TEXT use_in_phase 
    TEXT teacher_rationale 
    TEXT verification_state 
    TEXT scope_note 
  }
  lesson_review {
    INTEGER id PK
    INTEGER lesson_id 
    INTEGER source_topic_present 
    INTEGER standards_present 
    INTEGER linked_songs_count 
    INTEGER linked_resources_count 
    INTEGER step_count 
    INTEGER worksheet_count 
    INTEGER search_prompt_count 
    INTEGER completeness_score 
    TEXT review_state 
    TEXT automated_flags 
    TEXT reviewer_notes 
    TEXT reviewed_at 
  }
  lesson_search_prompts {
    INTEGER id PK
    INTEGER lesson_id 
    TEXT prompt_type 
    TEXT prompt 
    TEXT rationale 
  }
  lesson_song_guidance {
    INTEGER id PK
    INTEGER lesson_id 
    INTEGER song_id 
    TEXT relevance 
    TEXT use_in_phase 
    TEXT teacher_rationale 
  }
  lesson_steps {
    INTEGER id PK
    INTEGER lesson_id 
    INTEGER step_order 
    TEXT phase 
    TEXT title 
    INTEGER minutes 
    TEXT teacher_actions 
    TEXT student_actions 
    TEXT look_fors 
    TEXT assessment_prompt 
    TEXT resource_state 
    TEXT resource_note 
  }
  research_queue {
    TEXT id PK
    INTEGER priority 
    TEXT resource 
    TEXT why_it_matters 
    TEXT source_url 
    TEXT download_filename 
    TEXT assigned_to 
    TEXT status 
    TEXT notes 
    TEXT created_at 
    TEXT updated_at 
  }
  research_sources {
    TEXT id PK
    TEXT educator_org 
    TEXT source_title 
    TEXT source_type 
    TEXT age_setting 
    TEXT songs_covered 
    TEXT direct_url 
    TEXT local_pdf_filename 
    TEXT download_status 
    TEXT research_notes 
    TEXT created_at 
    TEXT updated_at 
  }
  schema_migrations {
    TEXT migration_id PK
    TEXT applied_at 
    TEXT omhas_sha256 
    TEXT curriculum_sha256 
    TEXT generated_sha256 
  }
  search_chunk_sources {
    TEXT search_chunk_id PKFK
    INTEGER source_document_id PKFK
  }
  source_documents ||--o{ search_chunk_sources : "source_document_id"
  search_chunks ||--o{ search_chunk_sources : "search_chunk_id"
  search_chunks {
    TEXT id PK
    TEXT kind 
    TEXT source_path 
    TEXT url 
    TEXT title 
    TEXT chunk_text 
    TEXT lyrics 
    TEXT instructions 
    TEXT embedding 
    TEXT meta 
    TEXT created_at 
    TEXT updated_at 
  }
  song_action_chunks {
    TEXT id PK
    TEXT song_action_id 
    TEXT search_chunk_id 
    TEXT created_at 
  }
  song_actions {
    TEXT id PK
    TEXT song_title 
    TEXT alternate_title 
    TEXT tradition_performer 
    TEXT action_wording 
    TEXT normalized_action 
    TEXT action_sequence 
    TEXT song_cue 
    TEXT action_classification 
    TEXT core_or_optional 
    TEXT age_range_stated 
    TEXT educator_org 
    TEXT source_title 
    TEXT source_type 
    TEXT page_timestamp 
    TEXT source_url 
    TEXT evidence_note 
    TEXT research_status 
    TEXT reviewer_notes 
    TEXT created_at 
    TEXT updated_at 
  }
  song_curriculum_links {
    INTEGER id PK
    INTEGER song_id FK
    TEXT subject 
    TEXT description 
    TEXT relevance 
    TEXT link_type 
  }
  SONGS ||--o{ song_curriculum_links : "song_id"
  source_documents {
    INTEGER id PK
    TEXT source_path 
    TEXT source_kind 
    TEXT review_state 
    TEXT checksum 
    TEXT imported_at 
  }
  worksheet_briefs {
    INTEGER id PK
    INTEGER lesson_id 
    INTEGER worksheet_order 
    TEXT title 
    TEXT purpose 
    TEXT activity_type 
    TEXT child_directions 
    TEXT answer_key_guidance 
    TEXT visual_notes 
    TEXT differentiation 
    TEXT materials_json 
    TEXT generation_prompt 
    TEXT status 
    TEXT review_flags 
    INTEGER lesson_asset_id 
  }

